--- a/proj/end.html
+++ b/proj/end.html
@@ -1,1 +1,29 @@
-спасибо за внимание!)
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="end.css">
+ </head>
+ <body class="card">
+    <h1>Заказать карту</h1>
+                <h3>Все карты будут доставлины в течении вечности.</h3>
+    <form action="" class="form">
+                <ul class="form__ul">
+                    <li class="user-info__item">
+                    <input type="text" name="fio"  id="fio" placeholder="Имя" required>
+                    </li>
+                    <li class="user-info__item">
+                    <input type="email" name="pochta" id="pochta" placeholder="Электронная почта" required>
+                    </li>
+                    <li class="user-info__item">
+                    <input type="text" name="phone"  id="phone" placeholder="телефон" required>
+                    </li>
+                </ul>
+                <button type="submit">Готово!</button>
+            </form>
+ </body>
+ </html>
+ 
+ 
